--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Tests#index</h1>
 <p>Find me in app/views/tests/index.html.erb</p>
 <p>Githubaction 届け！!</p>
+<%= link_to 'ログインページへ', login_path %>
