--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
           <div class='dropdown-menu dropdown-menu-end'>
             <div class='dropdown-item'>氏名</div>
             <div class='dropdown-divider'></div>
-            <%= link_to 'プロフィール', '#', class: 'dropdown-item' %>
+            <%= link_to 'プロフィール', user_path(current_user), class: 'dropdown-item' %>
             <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
           </div>
         </li>
