--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,23 +1,14 @@
 <header>
-  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
-    <%= link_to '/', class: 'navbar-brand' do %>
-    <% end %>
-    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
-      aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-      <span class='navbar-toggler-icon'></span>
-    </button>
-
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-      <ul class='navbar-nav ms-auto main-nav align-items-center'>
-        <li class='nav-item dropdown dropdown-slide'>
-          <div class='dropdown-menu dropdown-menu-end'>
-            <div class='dropdown-item'>氏名</div>
-            <div class='dropdown-divider'></div>
-            <%= link_to 'プロフィール', user_path(current_user), class: 'dropdown-item' %>
-            <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div>
+    <ul class='navbar-nav ms-auto main-nav align-items-center'>
+      <li class='nav-item dropdown dropdown-slide'>
+        <div class='dropdown-menu dropdown-menu-end'>
+          <div class='dropdown-item'><%= current_user.name %></div>
+          <div class='dropdown-divider'></div>
+          <%= link_to 'プロフィール', user_path(current_user), class: 'dropdown-item' %>
+          <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
+        </div>
+      </li>
+    </ul>
+  </div>
 </header>
