--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
       <h1><%= t('.title') %></h1>
-      <div class="text-right mb-3">
+      <div>
         <%= link_to t('defaults.edit'), edit_user_path(@user), class: 'btn btn-success' %>
       </div>
       <table class="table table-bordered bg-white">
