index.htmlを更新してテスト

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -2,5 +2,5 @@
 <p>Find me in app/views/tests/index.html.erb</p>
 <p>Githubaction 届け！!</p>
 <p>test</p>
-<p>再構築</p>
+<p>再構築!</p>
 <%= link_to 'ログインページへ', login_path %>
