レイアウト調整

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Tests#index</h1>
+<h1 class="text-3xl font-bold underline">Tests#index</h1>
 <p>Find me in app/views/tests/index.html.erb</p>
-<p>Githubaction 届け！!</p>
+<p class="text-blue-500">Githubaction 届け！!</p>
 <p>test</p>
 <p>再構築</p>
-<%= link_to 'ログインページへ', login_path %>
+<%= link_to 'ログインページへ', login_path, class: "text-red-500 hover:text-red-700" %>
