--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,3 +4,11 @@
 <p>test</p>
 <p>再構築</p>
 <%= link_to 'ログインページへ', login_path, class: "text-red-500 hover:text-red-700" %>
+
+<h1 class="text-3xl font-bold underline">
+    Hello world!
+</h1>
+
+<button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
+
+<button class="btn">daisyUI</button>
