--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -2,7 +2,7 @@
   <div>
     <ul class="navbar-nav ms-auto main-nav align-items-center">
       <li class="nav-item">
-        <%= link_to 'ログイン', login_path, class: "nav-link" %>
+        <%= link_to t('header.login'), login_path, class: "nav-link" %>
       </li>
     </ul>
   </div>
