--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,8 +5,8 @@
         <div class='dropdown-menu dropdown-menu-end'>
           <div class='dropdown-item'><%= current_user.name %></div>
           <div class='dropdown-divider'></div>
-          <%= link_to 'プロフィール', user_path(current_user), class: 'dropdown-item' %>
-          <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
+          <%= link_to 'プロフィール', users_mypage_path, class: 'dropdown-item' %>
+          <%= link_to t('header.logout'),logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
         </div>
       </li>
     </ul>
