--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,14 +1,7 @@
-<h1 class="text-3xl font-bold underline">Tests#index</h1>
-<p>Find me in app/views/tests/index.html.erb</p>
-<p class="text-blue-500">Githubaction 届け！!</p>
-<p>test</p>
-<p>再構築</p>
+<h1 class="text-3xl font-bold">Topページ</h1>
 <%= link_to 'ログインページへ', login_path, class: "text-red-500 hover:text-red-700" %>
 
-<h1 class="text-3xl font-bold underline">
-    Hello world!
-</h1>
-
-<button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
-
-<button class="btn">daisyUI</button>
+<div>
+    <button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
+    <button class="btn">daisyUI</button>
+</div>
