--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,8 +6,14 @@
       <%= form_with model: @user, url: user_path(@user), local: true do |f| %>
         <div class="form-group">
           <%= f.label :avatar %>
-          <%= f.file_field :avatar, onchange: 'previewFileWithId(preview)', class: 'form-control', accept: 'image/*' %>
-          <%#= f.hidden_field :avatar_cache %>
+          <%= f.file_field :avatar, class: 'form-control', accept: 'image/*' %>
+          <%= f.hidden_field :avatar_cache %>
+          <div class='mt-3 mb-3'>
+            <%= image_tag @user.avatar.url,
+                          class: 'rounded-circle',
+                          id: 'preview',
+                          size: '100x100' %>
+          </div>
         </div>
         <div class="form-group">
           <%= f.label :email %>
@@ -16,12 +22,6 @@
         <div class="form-group">
           <%= f.label :name %>
           <%= f.text_field :name, class: 'form-control' %>
-        </div>
-        <div class='mt-3 mb-3'>
-          <%#= image_tag @user.avatar.url,
-                        class: 'rounded-circle',
-                        id: 'preview',
-                        size: '100x100' %>
         </div>
         <%= f.submit class: 'btn btn-primary' %>
       <% end %>
