--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -3,7 +3,7 @@
     <ul class="nav flex-column">
       <li class="nav-item">
         <%= User.human_attribute_name(:avatar) %>
-        <%= image_tag(current_user.avatar.url, size: "150x150") %>
+        <%= image_tag(current_user.avatar.url, width: '100', height: '100') %>
       </li>
       <li class="nav-item">
         <%= User.human_attribute_name(:name) %>
