--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,7 +1,5 @@
 <h1 class="text-3xl font-bold">Topページ</h1>
-<%= link_to 'ログインページへ', login_path, class: "text-red-500 hover:text-red-700" %>
-
 <div>
-    <button class="bg-gray-900 hover:bg-gray-800 text-white rounded px-4 py-2">tailwind</button>
-    <button class="btn">daisyUI</button>
+    <%= link_to 'youtubeのビデオ一覧', youtube_videos_path, class: "text-blue-500 hover:text-red-700" %>
 </div>
+<%= link_to 'ログインページへ', login_path, class: "text-red-500 hover:text-red-700" %>
