--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,12 +1,9 @@
 <h2>メモの編集</h2>
 
-<%= form_with model: [@youtube_video, @note], 
-              url: youtube_video_note_path(@youtube_video, @note), 
-              id: "edit_note-#{@note.id}", 
-              class: 'edit_note',locale: true  do |form| %>
+<%= form_with model: [@youtube_video, @note], id: "edit_note-#{@note.id}", class: 'edit_note', local: true do |form| %>
   <div class="form-group">
-    <%= form.label :timestamp, "タイムスタンプ" %>
-    <%= form.text_field :timestamp, class: 'form-control' %>
+    <%= form.label :video_timestamp, "タイムスタンプ" %>
+    <%= form.text_field :video_timestamp, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= form.label :content, "メモの内容" %>
