--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -5,9 +5,13 @@
       <%= f.text_field :video_timestamp, class: 'form-control', placeholder: "例: '1:23'" %>
     </div>
     <div class="form-group">
-      <%= f.label :content, "メモの内容" %>
+      <%= f.label :content, "メモ" %>
       <%= f.text_area :content, class: 'form-control', placeholder: "メモを入力" %>
     </div>
-    <%= f.submit "メモを追加", class: 'btn btn-primary' %>
+    <div class="form-group">
+      <%= f.label :is_visible, "表示" %>
+      <%= f.select :is_visible, [[ '表示する', true ], [ '表示しない', false ]], {}, { class: "form-select" } %>
+    </div>
+    <%= f.submit "投稿", class: 'btn btn-primary' %>
   <% end %>
 </div>
