--- a/app/views/notes/destroy.turbo_stream.erb
+++ b/app/views/notes/destroy.turbo_stream.erb
@@ -1,6 +1,6 @@
-<%= turbo_stream.remove "note-#{@note.id}" %>
+<%= turbo_stream.remove dom_id(@note) %>
 
-<% if @youtube_video.notes.empty? %>
+<% if @youtube_video.notes.reload.where(is_visible: true).empty? %>
   <%= turbo_stream.update "notes_list" do %>
     <p id="no_notes_message">メモがありません。</p>
   <% end %>
