--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,15 +1,19 @@
 <h2>メモの編集</h2>
 
-<%= form_with model: [@youtube_video, @note], id: "edit_note-#{@note.id}", class: 'edit_note', local: true do |form| %>
+<%= form_with model: [@youtube_video, @note], id: "edit_note-#{@note.id}", class: 'edit_note', local: true do |f| %>
   <div class="form-group">
-    <%= form.label :video_timestamp, "タイムスタンプ" %>
-    <%= form.text_field :video_timestamp, class: 'form-control' %>
+    <%= f.label :video_timestamp, "タイムスタンプ" %>
+    <%= f.text_field :video_timestamp, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :content, "メモの内容" %>
-    <%= form.text_area :content, class: 'form-control' %>
+    <%= f.label :content, "メモの内容" %>
+    <%= f.text_area :content, class: 'form-control' %>
   </div>
-  <%= form.submit "更新する", class: 'btn btn-primary' %>
+  <div class="form-group">
+    <%= f.label :is_visible, "表示" %>
+    <%= f.select :is_visible, [[ '表示する', true ], [ '表示しない', false ]], {}, { class: "form-select" } %>
+  </div>
+  <%= f.submit "更新する", class: 'btn btn-primary' %>
 <% end %>
 
 <%= link_to '戻る', youtube_video_path(@youtube_video), class: 'btn btn-secondary' %>
