--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,17 +1,17 @@
-<div id="<%= dom_id(note) %>" class="card bordered">
+<div id="<%= dom_id(note) %>" class="card w-96 bg-base-100 shadow-xl image-full">
   <div class="card-body">
-    <p><strong>ユーザー名：</strong><%= note.user.name %></p>
-    <p><strong>タイムスタンプ:</strong>
+    <p class="card-title"><strong>ユーザー名：</strong><%= note.user.name %></p>
+    <p class="card-title"><strong>タイムスタンプ:</strong>
       <%= link_to note.video_timestamp, '#',
                   onclick: "playFromTimestamp(#{video_timestamp_to_seconds(note.video_timestamp)}); return false;",
                   class: "timestamp-link" %>
     </p>
-    <p><strong>メモ:</strong> <%= note.content %></p>
+    <p class="card-title"><strong>メモ:</strong> <%= note.content %></p>
     <% unless note.is_visible %>
-      <p class="text-error"><strong>ステータス：</strong>非表示中</p>
+      <p class="card-title"><strong>ステータス：</strong>非表示中</p>
     <% end %>
     <% if note.persisted? && current_user == note.user %>
-      <div class="card-actions">
+      <div class="card-actions justify-end">
         <%= link_to 'Xでシェア', "https://x.com/share?url=#{request.url}&text=#{ERB::Util.url_encode("【シェア】\nタイムスタンプ: #{note.video_timestamp} \nメモ: #{note.content} \nYouTube: https://www.youtube.com/watch?v=#{note.youtube_video.youtube_id}&t=#{video_timestamp_to_seconds(note.video_timestamp)}s")}", target: '_blank', class: 'btn btn-primary' %>
         <%= link_to '編集', edit_youtube_video_note_path(note.youtube_video, note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-info' %>
         <%= link_to '削除', youtube_video_note_path(note.youtube_video, note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-error' %>
