--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
-<header>
-  <div>
-    <ul class='navbar-nav ms-auto main-nav align-items-center'>
-      <li class='nav-item dropdown dropdown-slide'>
-        <div class='dropdown-menu dropdown-menu-end'>
-          <div class='dropdown-item'><%= current_user.name %></div>
-          <div class='dropdown-divider'></div>
-          <%= link_to 'プロフィール', users_mypage_path, class: 'dropdown-item' %>
-          <%= link_to t('header.logout'),logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
-        </div>
-      </li>
-    </ul>
+<header class="bg-base-100">
+  <div class="navbar max-w-screen-xl mx-auto">
+    <div class="navbar-start">
+      <%= link_to 'ViMemo', root_path, class: "btn btn-ghost normal-case text-xl" %>
+    </div>
+    <div class="navbar max-w-screen-xl mx-auto flex justify-end">
+    <div class="navbar-end">
+      <ul class="menu menu-horizontal p-0">
+        <li><%= link_to 'プロフィール', users_mypage_path, class: 'btn btn-ghost' %></li>
+        <li><%= link_to t('header.logout'), logout_path, class: 'btn btn-ghost', data: { turbo_method: :delete } %></li>
+      </ul>
+    </div>
   </div>
 </header>
