--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,35 +1,32 @@
 <div class="container mx-auto mb-5 pt-2">
   <h1 class="text-3xl font-bold mb-4">Youtubeビデオ一覧</h1>
   <div class="flex flex-wrap -mx-3 mb-6">
-    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "search-form w-full px-3 mb-6 md:mb-0" do |f| %>
-      <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-6 md:mb-0" do |f| %>
+      <div class="w-full">
         <%= f.label :title_cont, "タイトル", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= f.search_field :title_cont, class: "appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
-      </div>
-      <div class="flex items-center justify-between mt-4">
-        <%= f.submit "検索", class: "btn btn-primary" %>
+        <%= f.search_field :title_cont, class: "input input-bordered w-full" %>
+        <div class="mt-4">
+          <%= f.submit "検索", class: "btn btn-primary" %>
+        </div>
       </div>
     <% end %>
-    <div class="w-full px-3">
-      <%= form_with url: fetch_videos_by_genre_youtube_videos_path, method: :get, local: true, class: "w-full" do |form| %>
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-          <%= form.label :genre, "ジャンルまたはキーワード", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-          <%= form.text_field :genre, class: "appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" %>
-        </div>
-
-        <div class="flex items-center justify-between mt-4">
+    <%= form_with url: fetch_videos_by_genre_youtube_videos_path, method: :get, local: true, class: "w-full md:w-1/2 px-3" do |form| %>
+      <div class="w-full">
+        <%= form.label :genre, "ジャンルまたはキーワード", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+        <%= form.text_field :genre, class: "input input-bordered w-full" %>
+        <div class="mt-4">
           <%= form.submit "取得", class: "btn" %>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-md-12">
       <%= render @youtube_videos %>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row justify-content-center">
+    <div class="col-md-auto">
       <!-- ページネーション -->
       <%= paginate @youtube_videos, class: "pagination" %>
     </div>
