--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,21 +1,22 @@
 <div class="container mx-auto mb-5 pt-2">
   <h1 class="text-3xl font-bold mb-4">Youtubeビデオ一覧</h1>
   <div class="flex flex-wrap -mx-3 mb-6">
-    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-6 md:mb-0" do |f| %>
-      <div class="w-full">
-        <%= f.label :title_cont, "タイトル", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= f.search_field :title_cont, class: "input input-bordered w-full" %>
-        <div class="mt-4">
-          <%= f.submit "検索", class: "btn btn-primary" %>
+    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-6" do |f| %>
+      <div id="search-form" class="w-full">
+        <button type="button" class="btn btn-ghost" onclick="switchSearchType('title')">タイトル検索</button>
+        <button type="button" class="btn btn-ghost" onclick="switchSearchType('memo')">メモ検索</button>
+        <div id="search-title" class="px-3">
+          <%= f.label :title_cont, "タイトル", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+          <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered w-full mb-4" %>
         </div>
-      </div>
-    <% end %>
-    <%= form_with url: fetch_videos_by_genre_youtube_videos_path, method: :get, local: true, class: "w-full md:w-1/2 px-3" do |form| %>
-      <div class="w-full">
-        <%= form.label :genre, "ジャンルまたはキーワード", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.text_field :genre, class: "input input-bordered w-full" %>
-        <div class="mt-4">
-          <%= form.submit "取得", class: "btn" %>
+
+        <div id="search-memo" class="px-3 hidden">
+          <%= f.label :notes_content_cont, "メモ内容", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
+          <%= f.search_field :notes_content_cont, placeholder: "メモを検索", class: "input input-bordered w-full mb-4" %>
+        </div>
+
+        <div class="flex justify-between px-3 mb-4">
+          <%= f.submit "検索", class: "btn btn-primary" %>
         </div>
       </div>
     <% end %>
@@ -31,4 +32,15 @@
       <%= paginate @youtube_videos, class: "pagination" %>
     </div>
   </div>
+  <script>
+    function switchSearchType(type) {
+      if (type === 'title') {
+        document.getElementById('search-title').style.display = 'block';
+        document.getElementById('search-memo').style.display = 'none';
+      } else {
+        document.getElementById('search-title').style.display = 'none';
+        document.getElementById('search-memo').style.display = 'block';
+      }
+    }
+  </script>
 </div>
