--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id(note) %>" class="card w-96 bg-base-100 shadow-xl image-full">
+<div id="<%= dom_id(note) %>" class="mb-3 card w-96 bg-base-100 shadow-xl image-full">
   <div class="card-body">
     <p class="card-title"><strong>ユーザー名：</strong><%= note.user.name %></p>
     <p class="card-title"><strong>タイムスタンプ:</strong>
