--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,25 +1,7 @@
 <div class="container mx-auto mb-5 pt-2">
   <h1 class="text-3xl font-bold mb-4">Youtubeビデオ一覧</h1>
   <div class="flex flex-wrap -mx-3 mb-6">
-    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-3" do |f| %>
-      <div id="search-form" class="w-full">
-        <button type="button" class="btn btn-ghost" onclick="switchSearchType('title')">タイトル検索</button>
-        <button type="button" class="btn btn-ghost" onclick="switchSearchType('memo')">メモ検索</button>
-        <div id="search-title" class="px-3">
-          <%= f.label :title_cont, "タイトル", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-          <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered w-full mb-4" %>
-        </div>
-
-        <div id="search-memo" class="px-3 hidden">
-          <%= f.label :notes_content_cont, "メモ内容", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-          <%= f.search_field :notes_content_cont, placeholder: "メモを検索", class: "input input-bordered w-full mb-4" %>
-        </div>
-
-        <div class="flex justify-between px-3">
-          <%= f.submit "検索", class: "btn btn-primary" %>
-        </div>
-      </div>
-    <% end %>
+    <%= render 'shared/search_form', q: @q %>
   </div>
   <div class="row justify-content-center">
     <div class="col-md-12">
@@ -28,19 +10,7 @@
   </div>
   <div class="row justify-content-center">
     <div class="col-md-auto">
-      <!-- ページネーション -->
       <%= paginate @youtube_videos, class: "pagination" %>
     </div>
   </div>
-  <script>
-    function switchSearchType(type) {
-      if (type === 'title') {
-        document.getElementById('search-title').style.display = 'block';
-        document.getElementById('search-memo').style.display = 'none';
-      } else {
-        document.getElementById('search-title').style.display = 'none';
-        document.getElementById('search-memo').style.display = 'block';
-      }
-    }
-  </script>
 </div>
