--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -2,7 +2,7 @@
   <div id="search-form" class="w-full">
     <div id="search-memo" class="px-3">
       <%= f.label :notes_content_cont, "メモ内容", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-      <%= f.search_field :notes_content_cont, placeholder: "メモを検索", class: "input input-bordered w-full mb-4" %>
+      <%= f.search_field :notes_content_cont, placeholder: "メモ内容で検索", class: "input input-bordered w-full mb-4" %>
     </div>
     <div class="flex justify-between px-3">
       <%= f.submit "検索", class: "btn btn-primary" %>
