アップロード機能実装、アップロード画像にメモも実装

--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -12,9 +12,11 @@
     <% end %>
     <% if note.persisted? && current_user == note.user %>
       <div class="card-actions justify-end">
-        <%= link_to 'Xでシェア', "https://x.com/share?url=#{request.url}&text=#{ERB::Util.url_encode("【シェア】\nタイムスタンプ: #{note.video_timestamp} \nメモ: #{note.content} \nYouTube: https://www.youtube.com/watch?v=#{note.youtube_video.youtube_id}&t=#{video_timestamp_to_seconds(note.video_timestamp)}s")}", target: '_blank', class: 'btn btn-primary' %>
-        <%= link_to '編集', edit_youtube_video_note_path(note.youtube_video, note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-info' %>
-        <%= link_to '削除', youtube_video_note_path(note.youtube_video, note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-error' %>
+        <% if note.youtube_video.present? %>
+          <%= link_to 'Xでシェア', "https://x.com/share?url=#{request.url}&text=#{ERB::Util.url_encode("【シェア】\nタイムスタンプ: #{note.video_timestamp} \nメモ: #{note.content} \nYouTube: https://www.youtube.com/watch?v=#{note.youtube_video.youtube_id}&t=#{video_timestamp_to_seconds(note.video_timestamp)}s")}", target: '_blank', class: 'btn btn-primary' %>
+        <% end %>
+        <%= link_to '編集', edit_path_for(note), data: { turbo_frame: dom_id(note) }, class: 'btn btn-info' %>
+        <%= link_to '削除', delete_path_for(note), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm')}, class: 'btn btn-error' %>
       </div>
     <% end %>
   </div>
