--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,5 @@
 <h1 class="text-3xl font-bold">Topページ</h1>
 <div>
     <%= link_to 'youtubeのビデオ一覧', youtube_videos_path, class: "text-blue-500 hover:text-red-700" %>
+    <%= link_to '投稿ビデオ一覧', videos_path, class: "text-blue-500 hover:text-red-700" %>
 </div>
