--- a/app/views/youtube_videos/show.html.erb
+++ b/app/views/youtube_videos/show.html.erb
@@ -9,7 +9,7 @@
 <%= link_to '削除', youtube_video_path(@youtube_video), data: { turbo_method: :delete, turbo_confirm: t('defaults.delete_confirm') }, class: 'btn btn-error' %>
 
 <!-- メモの追加フォーム -->
-<%= render 'notes/form' %>
+<%= render 'notes/form_youtube' %>
 
 <!-- メモの一覧表示 -->
 <div id="notes_list">
