--- a/app/views/notes/destroy.turbo_stream.erb
+++ b/app/views/notes/destroy.turbo_stream.erb
@@ -1,6 +1,7 @@
 <%= turbo_stream.remove dom_id(@note) %>
 
-<% if @youtube_video.notes.reload.where(is_visible: true).empty? %>
+<% video = @youtube_video || @video %>
+<% if video.notes.reload.where(is_visible: true).empty? %>
   <%= turbo_stream.update "notes_list" do %>
     <p id="no_notes_message">メモがありません。</p>
   <% end %>
