--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,13 +1,9 @@
-<%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-3" do |f| %>
-  <div id="search-form" class="w-full">
-    <div id="search-memo" class="px-3">
+<%= search_form_for @q, url: youtube_videos_path, method: :get, class: "w-full md:w-1/2 px-3 mb-3 flex" do |f| %>
+  <div id="search-form" class="w-auto flex justify-left">
+    <div id="search-memo" class="flex items-center space-x-4">
       <%= f.label :notes_content_cont, "メモ内容", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-      <%= f.search_field :notes_content_cont, placeholder: "メモ内容で検索", class: "input input-bordered w-full mb-4" %>
-    </div>
-    <div class="flex justify-between px-3">
-      <%= f.submit "検索", class: "btn btn-primary" %>
+      <%= f.search_field :notes_content_cont, placeholder: "メモ内容で検索", class: "input input-bordered xl-4" %>
+        <%= f.submit "検索", class: "btn btn-primary" %>
     </div>
   </div>
 <% end %>
-
-
