--- a/app/views/youtube_videos/_youtube_video.html.erb
+++ b/app/views/youtube_videos/_youtube_video.html.erb
@@ -1,7 +1,7 @@
-<h1 class="text-center mb-4">
+<h1 class="mb-4">
   <%= link_to youtube_video.title, youtube_video_path(youtube_video) %>
 </h1>
-<div class="flex justify-center">
+<div class="flex">
   <div class="mb-4 max-w-xl">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= youtube_video.youtube_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div>
