お気に入り一覧機能を実装

--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -2,4 +2,5 @@
 <div>
     <%= link_to 'youtubeのビデオ一覧', youtube_videos_path, class: "text-blue-500 hover:text-red-700" %>
     <%= link_to '投稿ビデオ一覧', videos_path, class: "text-blue-500 hover:text-red-700" %>
+    <%= link_to 'お気に入りビデオ一覧', favorites_videos_path, class: "text-blue-500 hover:text-red-700" %>
 </div>
