--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,17 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="d-flex flex-column min-vh-100">
+  <body>
     <% if logged_in? %>
       <%= render partial: 'shared/header' %>
     <% else %>
       <%= render partial: 'shared/before_login_header' %>
     <% end %>
-    <div class="container-fluid d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-      <div class="row">
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-          <%= render 'shared/flash_message' %>
-          <%= yield %>
-        </main>
-      </div>
+    <div class="mx-auto px-4">
+      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+        <%= render 'shared/flash_message' %>
+        <%= yield %>
+      </main>
     </div>
     <%= render partial: 'shared/footer' %>
   </body>
