--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="bg-base-100 flex flex-col items-start w-full max-w-4xl space-y-2">
-  <div class="navbar mb-2 flex w-auto">
+<header class="flex">
+  <div class="navbar mb-2">
     <%= link_to 'ViMemo', root_path, class: "btn btn-ghost normal-case text-xl" %>
     <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "flex items-center space-x-4 ml-4" do |f| %>
       <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered" %>
