--- a/app/views/youtube_videos/_youtube_video.html.erb
+++ b/app/views/youtube_videos/_youtube_video.html.erb
@@ -3,9 +3,9 @@
 </h1>
 <div class="flex">
   <div class="mb-6 max-w-xl text-left">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= youtube_video.youtube_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/<%= youtube_video.youtube_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div>
-      <p class="mb-2">公開日: <%= youtube_video.published_at %></p>
+      <p>公開日: <%= youtube_video.published_at %></p>
       <p>動画時間: <%= format_duration(youtube_video.duration) %></p>
     </div>
   </div>
