--- a/app/views/youtube_videos/_youtube_video.html.erb
+++ b/app/views/youtube_videos/_youtube_video.html.erb
@@ -2,7 +2,7 @@
   <%= link_to youtube_video.title, youtube_video_path(youtube_video) %>
 </h1>
 <div class="flex">
-  <div class="mb-6 max-w-xl text-left">
+  <div class="mb-6 text-left w-full">
     <iframe class="w-full aspect-video" src="https://www.youtube.com/embed/<%= youtube_video.youtube_id %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div>
       <p>公開日: <%= youtube_video.published_at %></p>
