--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,29 @@
-<header class="flex">
-  <div class="navbar mb-2">
+<header class="bg-base-100 w-full">
+  <div class="navbar mb-2 max-w-full mx-auto px-4 sm:px-6 lg:px-8">
     <%= link_to 'ViMemo', root_path, class: "btn btn-ghost normal-case text-xl" %>
-    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "flex items-center space-x-4 ml-4" do |f| %>
-      <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered" %>
+    <%= search_form_for @q, url: youtube_videos_path, method: :get, class: "flex items-center space-x-4 ml-4 flex-grow" do |f| %>
+      <%= f.search_field :title_cont, placeholder: "タイトルを検索", class: "input input-bordered flex-grow" %>
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
-    <div class="dropdown dropdown-end">
-      <label tabindex="0" class="btn m-1">メニュー</label>
-      <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+    <div class="navbar bg-base-100">
+      <div class="flex-none">
+        <button class="btn btn-square btn-ghost" onclick="toggleMenu()" style="padding: 8px; background-color: transparent;">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" style="fill: none; stroke: currentColor; stroke-width: 2;">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <ul id="menu" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52 hidden">
         <li><%= link_to 'プロフィール', users_mypage_path %></li>
         <li><%= link_to t('header.logout'), logout_path, data: { turbo_method: :delete } %></li>
       </ul>
     </div>
   </div>
 </header>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById('menu');
+  menu.classList.toggle('hidden');
+}
+</script>
