--- a/app/views/youtube_videos/index.html.erb
+++ b/app/views/youtube_videos/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
   <h1 class="text-3xl font-bold mb-4 text-left">Youtubeビデオ一覧</h1>
-  <div class="flex flex-wrap justify-left mb-6">
+  <div class="flex justify-left mb-6">
     <%= render 'shared/search_form', q: @q %>
   </div>
   <div class="flex justify-center">
