--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,10 +1,10 @@
-<div class="container mx-auto mb-5 pt-2 px-4 max-w-4xl">
+<div class="container mx-auto mb-5 pt-2 px-4 sm:px-6 lg:px-8 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl">
   <h1 class="text-3xl font-bold mb-4 text-center">ビデオ一覧</h1>
-  <div class="flex flex-wrap justify-center mb-6">
+  <div class="flex justify-left mb-6">
     <%= render 'shared/search_form', q: @q %>
   </div>
   <div class="flex justify-center mb-6">
-    <div class="w-full max-w-4xl">
+    <div class="w-full">
       <%= render @videos %>
     </div>
   </div>
@@ -13,7 +13,7 @@
       <%= paginate @videos, class: "pagination" %>
     </div>
   </div>
-  <div class="flex justify-center my-4">
+  <div class="flex my-4">
     <%= link_to new_video_path, class: "btn btn-primary" do %>
       <h2 class="text-lg">新規登録</h2>
     <% end %>
