--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
     <% end %>
     <div class="dropdown dropdown-end">
       <div class="flex-none">
-        <button class="btn btn-square btn-ghost" onclick="toggleMenu()" style="padding: 8px; background-color: transparent;">
+        <button class="btn btn-square btn-ghost" onclick="toggleMenu()" ontouchstart="toggleMenu()" style="padding: 8px; background-color: transparent;">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" style="fill: none; stroke: currentColor; stroke-width: 2;">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
