--- a/app/views/youtube_videos/_youtube_video.html.erb
+++ b/app/views/youtube_videos/_youtube_video.html.erb
@@ -1,5 +1,5 @@
 <h1 class="mb-4">
-  <%= link_to youtube_video.title, youtube_video_path(youtube_video), class: "btn btn-outline animate-bounce" %>
+  <%= link_to youtube_video.title, youtube_video_path(youtube_video), class: "btn btn-outline" %>
 </h1>
 <div class="flex">
   <div class="mb-6 text-left w-full">
